2007-07-11  William Cohen  <wcohen@redhat.com>

	* systemtap.spec.in: Make sqlite support selectable.
	
2007-07-11  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Don't AC_MSG_ERROR if don't HAVE_LIBSQLITE3.
	* coveragedb.cxx: Compile to nothing unless HAVE_LIBSQLITE3.
	* main.cxx: Print no error message on -q if HAVE_LIBSQLITE3.
	* configure: Regenerated, looks rosier with HAVE_LIBSQLITE3.

2007-07-08  William Cohen  <wcohen@redhat.com>

	PR 4529
	* coveragedb.cxx (update_coverage_db): Make index "unique" to optimize.

2007-07-08  William Cohen  <wcohen@redhat.com>

	PR 4529
	* coveragedb.h (db_type): New enum for type column in coverage_element.
	(coverage_element): Remove removed column, change type to int.
	* coveragedb.cxx (has_table, has_index): New.
	(update_coverage_db): Use has_table, has_index.
	(enter_element): Change for new table format.
	(increment_element): Ditto.
	(sql_update_used_probes): Ditto.
	(sql_update_unused_probes): Ditto.
	(sql_update_used_functions): Ditto.
	(sql_update_unused_functions): Ditto.
	(sql_update_used_globals): Ditto.
	(sql_update_unused_globals): Ditto.
	(update_coverage_db): Ditto.
	(print_coverage_info(systemtap_session): Relocate vector.
	(sql_update_used_probes): Ditto.
	(sql_update_unused_probes): Ditto.
	
2007-07-03  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Bumped version to 0.5.15 for development.
	* configure: Regenerated.

2007-07-03  Roland McGrath  <roland@frob.com>

	* Makefile.am (install-exec-local, install-elfutils): Use $(DESTDIR).
	(SRCDIR): Variable removed.
	(check): Use sh code in commands instead.
	* Makefile.in: Regenerated.

2007-07-02  William Cohen  <wcohen@redhat.com>

	PR 4717
	From Eugeniy Meshcheryakov <eugen@debian.org>
	* staptree.cxx: Add #include <cstdlib> for gcc 4.3.

2007-07-02  Frank Ch. Eigler  <fche@rechat.com>

	* staplog.c: New file from Satoru MORIYA
	<satoru.moriya.br@hitachi.com>, prototype crash(8) extension module.
	* configure.ac: Look for crash/defs.h.